Agrego almacenamiento en local storage, algunas correciones de estilos y funcionalidad de eliminación de tarea

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -16,6 +16,14 @@ header {
 header a {
     text-decoration: none;
     color: white;
+    transition: 200ms;
+}
+
+.menuIcon {
+    cursor: pointer;
+    font-size: 2rem;
+    justify-self: end;
+    margin-right: 16px;
 }
 
 .importantWord {
@@ -41,74 +49,13 @@ header a {
     display: none;
 }
 
-/* MOBILE ICON MENU STYLES AND ANIMATION */
-.icon-menu {
-    justify-self: end;
-    margin-right: 16px;
-    --gap: 5px;
-    --height-bar: 2px;
-    --pos-y-bar-one: 0;
-    --pos-y-bar-three: 0;
-    --scale-bar: 1;
-    --rotate-bar-one: 0;
-    --rotate-bar-three: 0;
-    width: 25px;
-    display: flex;
-    flex-direction: column;
-    gap: var(--gap);
-    cursor: pointer;
-    position: relative;
-}
-
-.check-icon {
-    display: none;
-}
-
-.bar {
-    position: relative;
-    height: var(--height-bar);
-    width: 100%;
-    border-radius: .5rem;
-    background-color: white;
-}
-
-.bar--1 {
-    top: var(--pos-y-bar-one);
-    transform: rotate(var(--rotate-bar-one));
-    transition: top 200ms 100ms, transform 100ms;
-}
-
-.bar--2 {
-    transform: scaleX(var(--scale-bar));
-    transition: transform 150ms 100ms;
-}
-
-.bar--3 {
-    bottom: var(--pos-y-bar-three);
-    transform: rotate(var(--rotate-bar-three));
-    transition: bottom 200ms 100ms, transform 100ms;
-}
-
-.check-icon:checked+.icon-menu>.bar--1 {
-    transition: top 200ms, transform 200ms 100ms;
-}
-
-.check-icon:checked+.icon-menu>.bar--3 {
-    transition: bottom 200ms, transform 200ms 100ms;
-}
-
-.check-icon:checked+.icon-menu {
-    --pos-y-bar-one: calc(var(--gap) + var(--height-bar));
-    --pos-y-bar-three: calc(var(--gap) + var(--height-bar));
-    --scale-bar: 0;
-    --rotate-bar-one: 45deg;
-    --rotate-bar-three: -45deg;
-}
-
-/* END MENU ANIMATION */
 
 @media(min-width: 800px) {
     .navbarMobile {
+        display: none;
+    }
+
+    .menuIcon {
         display: none;
     }
 
@@ -119,8 +66,10 @@ header a {
         margin-right: 32px;
     }
 
-    .icon-menu {
-        display: none;
+    header .navLink:hover {
+        transform: scale(1.1);
+        color: #ff8800;
+        text-decoration: underline;
     }
 
     header {
@@ -137,6 +86,11 @@ header a {
 @media(min-width: 1200px) {
     .h2Header {
         font-size: 2rem;
+        margin-left: 64px;
+    }
+
+    .navbarDesktop {
+        margin-right: 64px;
     }
 
     .importantWord {
