--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,6 +70,7 @@
 .cardHeader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 16px;
     border-bottom: 1px solid black;
 }
@@ -112,30 +113,15 @@
 }
 
 .deleteButton {
-    margin-right: 16px;
-    background-color: transparent;
-    position: relative;
-    border: none;
     cursor: pointer;
+    font-size: 1.5rem;
+    margin-right: 16px;
+    transition: 200ms;
 }
 
-.deleteButtonIcon {
-    transform: scale(1.2);
-    transition: .2s linear;
-}
-
-.deleteButton:hover>.deleteButtonIcon {
-    transform: scale(1.5);
-}
-
-.deleteButton:hover>.deleteButtonIcon path {
-    fill: rgb(168, 7, 7);
-}
-
-.deleteButton:hover::after {
-    visibility: visible;
-    opacity: 1;
-    top: -160%;
+.deleteButton:hover {
+    transform: scale(1.1);
+    color: red;
 }
 
 @media (min-width: 540px) {
