--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,6 +38,8 @@
 }
 
 .addNewTaskH4 {
+    max-width: 80%;
+    text-align: center;
     padding: 16px;
     margin: 0 auto;
     margin-bottom: 50px;
@@ -77,7 +79,9 @@
 
 .cardHeader h3 {
     justify-self: flex-start;
+    overflow-wrap: break-word;
     margin-left: 16px;
+    width: 75%;
 }
 
 .card .description {
